--- a/scss/main.scss
+++ b/scss/main.scss
@@ -902,6 +902,8 @@ $text-color-2: white;
     }
   }
 }
+/*programa complementarios*/
+
 
 @media screen and (min-width: 300px) and (max-width: 767px) {
   .header {
@@ -1000,12 +1002,6 @@ $text-color-2: white;
       }
     }
   }
-
-  .footer {
-    .footer__container {
-      gap: 20px;
-    }
-  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -1027,6 +1023,24 @@ $text-color-2: white;
     .header__div {
       .header__div-nav {
         display: inline-block;
+      }
+    }
+  }
+}
+
+@media (max-width:510px){
+    .footer {
+      
+    .footer__container {
+      padding-top: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      .container-informacion-footer{
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
